# glean-agent-toolkit

./: .cz.toml  .env.template  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  Taskfile.yml  mypy.ini  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  test.yml
.mypy_cache/3.11/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _io.data.json  _io.meta.json  _locale.data.json  _locale.meta.json  _lsprof.data.json  _lsprof.meta.json  (+266 more)
.mypy_cache/3.11/IPython/: __init__.data.json  __init__.meta.json  display.data.json  display.meta.json  paths.data.json  paths.meta.json
.mypy_cache/3.11/_griffe/: __init__.data.json  __init__.meta.json  c3linear.data.json  c3linear.meta.json  cli.data.json  cli.meta.json  collections.data.json  collections.meta.json  debug.data.json  debug.meta.json  diff.data.json  diff.meta.json  encoders.data.json  encoders.meta.json  enumerations.data.json  enumerations.meta.json  exceptions.data.json  exceptions.meta.json  expressions.data.json  expressions.meta.json  finder.data.json  finder.meta.json  git.data.json  git.meta.json  importer.data.json  importer.meta.json  loader.data.json  loader.meta.json  logger.data.json  logger.meta.json  merger.data.json  merger.meta.json  mixins.data.json  mixins.meta.json  models.data.json  models.meta.json  stats.data.json  stats.meta.json  tests.data.json  tests.meta.json
.mypy_cache/3.11/_pytest/: __init__.data.json  __init__.meta.json  _argcomplete.data.json  _argcomplete.meta.json  _version.data.json  _version.meta.json  cacheprovider.data.json  cacheprovider.meta.json  capture.data.json  capture.meta.json  compat.data.json  compat.meta.json  debugging.data.json  debugging.meta.json  deprecated.data.json  deprecated.meta.json  doctest.data.json  doctest.meta.json  fixtures.data.json  fixtures.meta.json  freeze_support.data.json  freeze_support.meta.json  helpconfig.data.json  helpconfig.meta.json  hookspec.data.json  hookspec.meta.json  legacypath.data.json  legacypath.meta.json  logging.data.json  logging.meta.json  main.data.json  main.meta.json  monkeypatch.data.json  monkeypatch.meta.json  nodes.data.json  nodes.meta.json  outcomes.data.json  outcomes.meta.json  pathlib.data.json  pathlib.meta.json  (+28 more)
.mypy_cache/3.11/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json  wsgi.data.json  wsgi.meta.json  xml.data.json  xml.meta.json
.mypy_cache/3.11/agents/: __init__.data.json  __init__.meta.json  _config.data.json  _config.meta.json  _debug.data.json  _debug.meta.json  _run_impl.data.json  _run_impl.meta.json  agent.data.json  agent.meta.json  agent_output.data.json  agent_output.meta.json  computer.data.json  computer.meta.json  exceptions.data.json  exceptions.meta.json  function_schema.data.json  function_schema.meta.json  guardrail.data.json  guardrail.meta.json  handoffs.data.json  handoffs.meta.json  items.data.json  items.meta.json  lifecycle.data.json  lifecycle.meta.json  logger.data.json  logger.meta.json  model_settings.data.json  model_settings.meta.json  result.data.json  result.meta.json  run.data.json  run.meta.json  run_context.data.json  run_context.meta.json  stream_events.data.json  stream_events.meta.json  strict_schema.data.json  strict_schema.meta.json  (+6 more)
.mypy_cache/3.11/annotated_types/: __init__.data.json  __init__.meta.json
.mypy_cache/3.11/anyio/: __init__.data.json  __init__.meta.json  from_thread.data.json  from_thread.meta.json  lowlevel.data.json  lowlevel.meta.json  to_thread.data.json  to_thread.meta.json
.mypy_cache/3.11/argcomplete/: __init__.data.json  __init__.meta.json  completers.data.json  completers.meta.json  exceptions.data.json  exceptions.meta.json  finders.data.json  finders.meta.json  io.data.json  io.meta.json  lexers.data.json  lexers.meta.json  shell_integration.data.json  shell_integration.meta.json
.mypy_cache/3.11/asttokens/: __init__.data.json  __init__.meta.json  astroid_compat.data.json  astroid_compat.meta.json  asttokens.data.json  asttokens.meta.json  line_numbers.data.json  line_numbers.meta.json  mark_tokens.data.json  mark_tokens.meta.json  util.data.json  util.meta.json
.mypy_cache/3.11/asyncio/: __init__.data.json  __init__.meta.json  base_events.data.json  base_events.meta.json  coroutines.data.json  coroutines.meta.json  events.data.json  events.meta.json  exceptions.data.json  exceptions.meta.json  futures.data.json  futures.meta.json  locks.data.json  locks.meta.json  mixins.data.json  mixins.meta.json  protocols.data.json  protocols.meta.json  queues.data.json  queues.meta.json  runners.data.json  runners.meta.json  selector_events.data.json  selector_events.meta.json  streams.data.json  streams.meta.json  subprocess.data.json  (+13 more)
.task/checksum/: install-uv
docs/: index.md
examples/: basic_usage.py  glean_search_tool.py
glean/: __init__.py
glean/toolkit/: decorators.py  registry.py
glean_agent_toolkit/toolkit/: __init__.py  cli.py  decorators.py  registry.py  spec.py
src/glean/: __init__.py
tests/: conftest.py  test_adapters.py  test_cli.py  test_common.py  test_decorators.py  test_registry.py  test_schema_generation.py  test_toolspec.py
tests/fixtures/: glean_search_success.json
tests/tools/: test_ai_web_search.py  test_calendar_search.py  test_code_search.py  test_employee_search.py  test_glean_search.py  test_gmail_search.py  test_outlook_search.py  test_web_search.py
(+4437 files in other folders)
